# M5StickCPlus_IDF_Sample

./: .gitignore  CMakeLists.txt  README.md  platformio.ini
components/lvgl_esp32_drivers/: CMakeLists.txt  lvgl_helpers.c  lvgl_spi_conf.h
components/lvgl_esp32_drivers/lvgl_tft/: Kconfig  ssd1306.c  st7735s.c  st7789.c  st7789.h
components/m5stick/: CMakeLists.txt  Kconfig  m5stick.c  m5stick.h
components/m5stick/axp192/: axp192.c  axp192.h  axp192_i2c.c
components/m5stick/button/: button.c
components/m5stick/mpu6886/: mpu6886.c
components/m5stick/pcf8563/: pcf8563.c
components/m5unit/: CMakeLists.txt  Kconfig  m5unit.h
main/: CMakeLists.txt  main.c  ui.c  wifi.c
main/includes/: ui.h  wifi.h
